# simplicity_sdk

./: .properties  simplicity_sdk.slcs
app/amazon/: amazon_bluetooth_experimental_templates.xml
app/bluetooth/: bluetooth_experimental_demos.xml  bluetooth_experimental_templates.xml  bluetooth_internal_demos.xml  bluetooth_production_demos.xml  bluetooth_production_templates.xml  esf.properties
app/bluetooth/component/: app_ota_dfu.slcc  ble_peer_manager_central.slcc  ble_peer_manager_common.slcc  ble_peer_manager_filter.slcc  ble_peer_manager_peripheral.slcc  bluetooth_ncp_transport_cpc.slcc  bluetooth_ncp_transport_iostream.slcc  bluetooth_ncp_transport_usart.slcc  bt_fp_aoa.slcc  bt_fp_ncp_default.slcc  bt_fp_soc_client.slcc  bt_fp_soc_default.slcc  bt_fp_soc_server.slcc  bt_hci_coex.slcc  bt_hci_ext_adv_filter_rssi_uuid.slcc  bt_hci_version.slcc  bt_iop_post_build.slcc  bt_ipc_listener.slcc  bt_post_build.slcc  cbap.slcc  cs_acp.slcc  cs_antenna.slcc  cs_initiator.slcc  cs_initiator_cli.slcc  cs_initiator_display.slcc  cs_ras.slcc  cs_reflector.slcc  cs_reflector_cli.slcc  ead_core.slcc  esl_tag_cli_test_harness.slcc  esl_tag_core.slcc  esl_tag_display.slcc  esl_tag_led.slcc  esl_tag_nvm_image.slcc  esl_tag_ots_server.slcc  esl_tag_pd_epd_driver.slcc  esl_tag_ram_image.slcc  esl_tag_sensor.slcc  esl_tag_user_display_driver.slcc  esl_tag_wstk_lcd_driver.slcc  (+44 more)
app/bluetooth/component_host/: cs_acp.mk  cs_initiator.mk  cs_initiator_client.mk  cs_reflector.mk  l2cap_transfer.mk  memory_manager.mk  ncp_host_bt.mk  ots_client.mk  rtl_lib.mk  sl_assert_mock.mk  sl_core_mock.mk  slist.mk  targets.mk
app/bluetooth/documentation/: slBluetooth_docContent.xml
app/bluetooth/postbuild_profile/: bt_common.slpb  bt_esl.slpb
app/bluetooth/script/: create_bl_files.py
app/btmesh/: btmesh.properties  btmesh_internal_demos.xml  btmesh_production_demos.xml  btmesh_production_templates.xml
app/btmesh/component/: app_btmesh_rta.slcc  (+19 more)
app/common/: app_common.properties  platform_production_demos.xml  platform_production_templates.xml
app/connect/: connect_production_templates.xml  esf.properties
app/rail/: esf.properties  rail_demos_only_demos.xml  rail_production_demos.xml  rail_production_templates.xml
app/wisun/: esf.properties  wisun_evaluation_demos.xml  wisun_production_demos.xml  wisun_production_templates.xml
app/zcl/: multi-protocol.json  zcl-zap.json
meta/: modules.yaml
platform/bootloader/: bootloader_production_demos.xml  bootloader_production_templates.xml  esf.properties
platform/documentation/: release-highlights.txt
platform/hwconf_data/: hwconfig.hwdata
platform/micrium_os/: micrium-krnx.properties
protocol/openthread/: esf.properties  openthread_experimental_templates.xml  openthread_production_demos.xml  openthread_production_templates.xml
protocol/openthread/embedded-otbr/: CMakeLists.txt  README.md  ot-si91x.slce  ot-si91x.slsdk  requirements.txt
protocol/openthread/embedded-otbr/artifacts/prebuilt/host/: ot-mcu-cli-ftd.rps  otbr-mcu-cli-ftd.rps
protocol/openthread/embedded-otbr/artifacts/prebuilt/rcp/: ot-rcp-brd4187c.s37
protocol/openthread/embedded-otbr/examples/border_router/: CMakeLists.txt
protocol/openthread/embedded-otbr/examples/border_router/agent/: CMakeLists.txt  application.cpp  application.hpp  sl_app.cpp  sl_app.h  sl_main.c
protocol/openthread/embedded-otbr/examples/border_router/border_agent/: CMakeLists.txt  border_agent.cpp  border_agent.hpp
protocol/openthread/embedded-otbr/examples/border_router/common/: CMakeLists.txt  api_strings.cpp  byteswap.hpp  callback.hpp  logging.cpp  logging.hpp  mainloop.cpp  mainloop.hpp  mainloop_manager.cpp  mainloop_manager.hpp  otbr_code_utils.cpp  otbr_code_utils.hpp  otbr_time.cpp  otbr_time.hpp  sl_otbr_utils.hpp  sl_otbr_utils.tpp  task_runner.cpp  task_runner.hpp  tlv.hpp  types.cpp  types.hpp
protocol/openthread/embedded-otbr/examples/border_router/mdns/: CMakeLists.txt  mdns.cpp  mdns.hpp  mdns_lwip.cpp  mdns_lwip.hpp
protocol/openthread/embedded-otbr/examples/border_router/rcp/: CMakeLists.txt  rcp_host.cpp  rcp_host.hpp  thread_host.cpp  thread_host.hpp
protocol/openthread/embedded-otbr/examples/border_router/utils/: CMakeLists.txt  dns_utils.cpp  thread_helper.cpp  thread_helper.hpp
protocol/openthread/embedded-otbr/examples/cli/: CMakeLists.txt  app.c  app.h
protocol/openthread/embedded-otbr/patch/: openthread.patch  sisdk.patch  wiseconnect.patch
protocol/openthread/embedded-otbr/script/: build  generate  si91x-definitions  si91x-mcu-host.slpb
protocol/openthread/embedded-otbr/si91x_component/: ot_mcu_headers.slcc  ot_mcu_platform_abstraction.slcc  ot_mcu_platform_abstraction_core.slcc  ot_posix_reuse.slcc  ot_stack_features_config.slcc
protocol/openthread/embedded-otbr/si91x_project/: openthread-si91x-mcu-host.slcp  openthread-si91x-otbr-mcu-host.slcp
protocol/openthread/embedded-otbr/src/mcu/: CMakeLists.txt  hdlc_interface.cpp  mcu_cli_stdio.cpp  mcu_netif.cpp  memory.c  sl_ot_rtos_adaptation.c  sl_ot_rtos_adaptation.h  udp.cpp
protocol/openthread/embedded-otbr/src/mcu/config/: sl_openthread_features_config.h
protocol/openthread/embedded-otbr/src/mcu/inc/: ip6_utils.hpp
protocol/openthread/embedded-otbr/src/mcu/inc/net/: if.h
protocol/openthread/embedded-otbr/src/mcu/si91x/: CMakeLists.txt  alarm.c  alarm.h  board_config.h  debug_uart.c  entropy.c  flash.c  hdlc_implement.c  misc.c  openthread-core-si91x-config-check.h  openthread-core-si91x-config.h  openthread-si91x-config.h  platform-si91x.h  ringbufs.c  ringbufs.h  sl_alarm_timers.h  sl_uart.c  sl_uart.h  syscalls.c  syscalls.h  system.cpp  uartdrv_uart.c
protocol/openthread/embedded-otbr/src/mcu/si91x/defaults/: lwipopts.h  sl_net_default_values.h
protocol/openthread/embedded-otbr/src/siwg917m111mgtba/: arm-none-eabi.cmake
protocol/usb/: usb.properties
protocol/z-wave/: z-wave_production_demos.xml  z-wave_production_templates.xml  zwave.properties
protocol/zigbee/: esf.properties  zigbee_experimental_templates.xml  zigbee_production_demos.xml  zigbee_production_templates.xml
(+5159 files in other folders)
